--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "description": "michaelball.co",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cycomachead/cycomachead.github.io.git"
@@ -19,9 +16,75 @@
     "url": "https://github.com/cycomachead/cycomachead.github.io/issues"
   },
   "homepage": "https://github.com/cycomachead/cycomachead.github.io#readme",
+  "scripts": {
+    "start": "npm run-script clean:project && webpack --env=dev --progress --profile --colors && concurrently \"webpack-dev-server --env=dev\" \"bundle exec jekyll serve\"",
+    "build:optim": "npm run-script clean:project && cross-env NODE_ENV=production webpack --env=prod --progress --profile --colors && webpack --env=optim  --progress --profile --colors && cross-env JEKYLL_ENV=production bundle exec jekyll build --config _config.yml,_config_production.yml",
+    "build:pwa:optim": "npm run-script clean:project && cross-env NODE_ENV=production webpack --env=pwa --progress --profile --colors && webpack --env=optim  --progress --profile --colors && cross-env JEKYLL_ENV=pwa bundle exec jekyll build --config _config.yml,_config_production.yml && sw-precache --config=config/sw.config.js --verbose",
+    "build": "npm run-script clean:project && cross-env NODE_ENV=production webpack --env=prod --progress --profile --colors && cross-env JEKYLL_ENV=production bundle exec jekyll build --config _config.yml,_config_production.yml",
+    "build:pwa": "npm run-script clean:project && cross-env NODE_ENV=production webpack --env=pwa --progress --profile --colors && cross-env JEKYLL_ENV=pwa bundle exec jekyll build --config _config.yml,_config_production.yml && sw-precache --config=config/sw.config.js --verbose",
+    "serve:dist": "http-server _site",
+    "clean:project": "rimraf ./_site ./assets",
+    "milo:build": "cross-env NODE_ENV=production webpack -p --config webpack.config.js",
+    "milo:watch": "webpack -p --config webpack.config.js --watch",
+    "milo:start": "webpack-dev-server --config webpack.config.js"
+  },
+  "devDependencies": {
+    "@babel/core": "7.6.4",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/preset-env": "7.6.3",
+    "@babel/register": "7.6.2",
+    "autoprefixer": "9.7.1",
+    "babel-eslint": "10.0.3",
+    "babel-loader": "8.0.6",
+    "babel-preset-env": "^1.6.0",
+    "browser-sync": "^2.18.13",
+    "browser-sync-webpack-plugin": "^1.2.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "concurrently": "^3.5.0",
+    "copy-webpack-plugin": "5.0.4",
+    "cross-env": "6.0.3",
+    "css-loader": "3.2.0",
+    "eslint": "6.6.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "expose-loader": "0.7.5",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "favicons-webpack-plugin": "^0.0.7",
+    "file-loader": "4.2.0",
+    "filemanager-webpack-plugin": "2.0.5",
+    "hard-source-webpack-plugin": "0.13.1",
+    "html-webpack-plugin": "^2.29.0",
+    "http-server": "^0.12.3",
+    "imagemin-webpack-plugin": "^1.5.0-beta.0",
+    "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "3.0.0",
+    "postcss-scss": "^1.0.2",
+    "resolve-url-loader": "3.1.0",
+    "rimraf": "^2.6.2",
+    "sass-loader": "8.0.0",
+    "script-loader": "0.7.2",
+    "style-loader": "1.0.0",
+    "sw-precache": "^5.2.0",
+    "tempusdominus-core": "5.0.3",
+    "terser-webpack-plugin": "2.2.1",
+    "url-loader": "2.2.0",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.1.0",
+    "webpack-plugin-critical": "^1.0.0",
+    "webpack-pwa-manifest": "^3.1.6"
+  },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@popperjs/core": "^2.4.4",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
-    "popper": "^1.0.1"
+    "popper.js": "^1.16.1",
+    "timeago.js": "^4.0.2"
   }
 }
